overflow flag added in body to prevent horizontal_scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 body {
     color: #40514E;
     text-align: center;
+    max-width: 100%;
+    overflow-x: hidden;
     font-family: 'Merriweather', serif;
     color: #40514E;
 }
